--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,26 @@
+@charset "UTF-8";
+
+/* Basic properties */
+
+@font-face {
+    font-family: 'symbols-technomart';
+    src: url('../font/symbols-technomart.eot?22619757');
+    src: url('../font/symbols-technomart.eot?22619757#iefix') format('embedded-opentype'),
+    url('../font/symbols-technomart.woff?22619757') format('woff'),
+    url('../font/symbols-technomart.ttf?22619757') format('truetype'),
+    url('../font/symbols-technomart.svg?22619757#symbols-technomart') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
     font-size: 13px;
-    line-height: 24px;
     font-family: 'Cuprum', 'Tahoma', sans-serif;
     font-weight: 400;
+    line-height: 24px;
+
+    min-width: 1200px;
+    background-color: #fff;
 }
 
 h2, h3 {
@@ -17,9 +35,121 @@ h3 {
     font-size: 23px;
 }
 
-header .slogan {
-    color: #ff3333;
-    font-style: italic;
-    line-height: 23px;
-    font-size: 16px;
+.clearfix::after {
+    content: "";
+    display: table;
+    clear: both;
 }
+
+/* Main blocks */
+
+.container {
+    width: 940px;
+    margin: 0 auto;
+}
+
+footer {
+
+}
+
+/* Header */
+
+header {
+
+}
+
+.status-bar {
+
+}
+
+.status-bar .logo {
+    font-size: 24px;
+    line-height: 26px;
+    color: #fff;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+
+.status-bar .search input {
+    font-size: 17px;
+    line-height: 18px;
+    color: #000;
+}
+
+.status-bar .bookmarks-counter,
+.status-bar .cart-items-counter,
+.status-bar .make-order-button {
+    font-size: 17px;
+    line-height: 18px;
+    color: #fff;
+    text-decoration: none;
+}
+
+header .slogan {
+    font-size: 16px;
+    line-height: 23px;
+    font-style: italic;
+    color: #ff3333;
+}
+
+
+
+/* Icons */
+[class^="icon-"]:before, [class*=" icon-"]:before {
+    font-family: "symbols-technomart";
+    font-style: normal;
+    font-weight: normal;
+    speak: none;
+
+    display: inline-block;
+    text-decoration: inherit;
+    width: 1em;
+    margin-right: .2em;
+    text-align: center;
+    /* opacity: .8; */
+
+    /* For safety - reset parent styles, that can break glyph codes*/
+    font-variant: normal;
+    text-transform: none;
+
+    /* fix buttons height, for twitter bootstrap */
+    line-height: 1em;
+
+    /* Animation center compensation - margins should be symmetric */
+    /* remove if not needed */
+    margin-left: .2em;
+
+    /* you can be more comfortable with increased icons size */
+    /* font-size: 120%; */
+
+    /* Uncomment for 3D effect */
+    /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+}
+
+.icon-left:before { content: '\3c'; } /* '&lt;' */
+.icon-right:before { content: '\3e'; } /* '&gt;' */
+.icon-basket:before { content: '\62'; } /* 'b' */
+.icon-facebook:before { content: '\66'; } /* 'f' */
+.icon-twitter:before { content: '\74'; } /* 't' */
+.icon-vk:before { content: '\76'; } /* 'v' */
+.icon-up:before { content: '\2c4'; } /* '˄' */
+.icon-down:before { content: '\2c5'; } /* '˅' */
+.icon-left-big:before { content: '\2190'; } /* '←' */
+.icon-right-big:before { content: '\2192'; } /* '→' */
+.icon-login:before { content: '\2386'; } /* '⎆' */
+.icon-logout:before { content: '\241b'; } /* '␛' */
+.icon-up-dir:before { content: '\25b2'; } /* '▲' */
+.icon-down-dir:before { content: '\25bc'; } /* '▼' */
+.icon-circle:before { content: '\25cb'; } /* '○' */
+.icon-circle-dot:before { content: '\25cf'; } /* '●' */
+.icon-star:before { content: '\2605'; } /* '★' */
+.icon-check-off:before { content: '\2610'; } /* '☐' */
+.icon-check-on:before { content: '\2611'; } /* '☑' */
+.icon-youtube:before { content: '\f39e'; } /* '' */
+.icon-home:before { content: '🏠'; } /* '\1f3e0' */
+.icon-user:before { content: '👨'; } /* '\1f468' */
+.icon-phone:before { content: '📞'; } /* '\1f4de' */
+.icon-instagramm:before { content: '📷'; } /* '\1f4f7' */
+.icon-search:before { content: '🔍'; } /* '\1f50d' */
+.icon-bookmark:before { content: '🔖'; } /* '\1f516' */
+
